# python-study

./: pyproject.toml
concepts/methods/: functions.py
concepts/object_data_structures/: __init__.py  arithmetic.py  strings.py  timestamps  tuples.py  variables.py
concepts/operators/: ops.py
concepts/statements/: if_elif.py  list_comprehensions.py  while_loops.py
data_structures/: dictionaries_maps.py  lists.py  tuples.py
document_parser/: parser.py  timestamps
document_parser/main/: timestamps
document_parser/test/: parser_test.py
object_data_structures/: arithmetic.py  boolean.py  dictionaries.py  io_files.py  lists.py  sets.py  strings.py  variables.py
operators/: ops.py  useful_ops.py
projects/coffee_machine/: main.py
projects/day-66-starting-files-cafe-api/: main.py
projects/document_parser/main/: parser.py  ts-1  ts-2  ts-3  ts_gcp_latest
projects/quiz_game/: main.py  question.py  quiz_game.py
projects/spotify_time_machine/: main.py  scraper.py  spotcreds.json  spotify_api.py
projects/sre/backups_snapshots/: README.md  api.py  main.py  pyproject.toml
projects/sre/cleanup_metadata/: README.md  docker-compose.yml
projects/sre/cleanup_metadata/config/: config.yaml
projects/sre/cleanup_metadata/src/: main.py
projects/sre/cleanup_metadata/tests/: test_mocks.py
projects/sre/cleanup_metadata/util/: populate_es.py
projects/sre/log_analysis_tool/: README.md
projects/sre/log_analysis_tool/analyzer/: main.py
projects/sre/log_analysis_tool/data/: sample.txt
projects/sre/scratch/: main.py
statements/: for_loops.py
(+4 files in other folders)
