[tool.poetry]
name = "python-study"
version = "0.1.0"
description = ""
authors = ["ekollarova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
spotipy = "^2.23.0"
flask = "^3.0.2"
flask_sqlalchemy= "^3.1.1"
SQLAlchemy="^2.0.25"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
